# Barycentrics11

./: .gitlab-ci.yml  README.md
barycentrics11/: .gitignore  CMakeLists.txt
barycentrics11/premake/: premake5.lua
barycentrics11/src/: Barycentrics11.cpp  Barycentrics11.h  Window.cpp  Window.h  shaders.hlsl
barycentrics11/src/ResourceFiles/: resource.h
barycentrics11/src/Shaders/: Barycentrics11.hlsl
